<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_graph"
    app:startDestination="@id/addressBookFragment">

    <fragment
        android:id="@+id/addressBookFragment"
        android:name="com.example.address_book.functionalities.addresslist.AddressBookFragment"
        android:label="@string/app_name" >
        <action
            android:id="@+id/action_addressBookFragment_to_newAddressFragment"
            app:destination="@id/newAddressFragment" />
        <action
            android:id="@+id/action_addressBookFragment_to_addressFragment"
            app:destination="@id/addressFragment" />
    </fragment>
    <fragment
        android:id="@+id/addressFragment"
        android:name="com.example.address_book.functionalities.address.AddressFragment"
        android:label="@string/address" />

    <fragment
        android:id="@+id/newAddressFragment"
        android:name="com.example.address_book.functionalities.newaddress.NewAddressFragment"
        android:label="@string/add_new_contact" />
</navigation>